<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Transition
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@+id/start">
        <OnSwipe
            app:dragDirection="dragUp"
            app:touchAnchorId="@id/scroll_view"
            app:touchAnchorSide="top" />

        <KeyFrameSet>
            <KeyAttribute
                app:framePosition="60"
                app:motionTarget="@id/backdrop_poster">
                <CustomAttribute
                    app:attributeName="imageAlpha"
                    app:customIntegerValue="255" />
            </KeyAttribute>
            <KeyAttribute
                app:framePosition="90"
                app:motionTarget="@id/backdrop_poster">
                <CustomAttribute
                    app:attributeName="imageAlpha"
                    app:customIntegerValue="50" />
            </KeyAttribute>

        </KeyFrameSet>
    </Transition>

    <ConstraintSet android:id="@+id/start">

        <Constraint
            android:id="@+id/backdrop_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,1.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintDimensionRatio="H,1.5:2"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <Constraint
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:maxWidth="0dp"
            app:layout_constraintEnd_toStartOf="@+id/favorite_button"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_poster">
            <CustomAttribute
                app:attributeName="maxLines"
                app:customIntegerValue="3" />
        </Constraint>

        <Constraint
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Constraint
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/release_date"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

        <Constraint
            android:id="@+id/text_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@{data.overview}"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview" />

        <Constraint
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <Constraint
            android:id="@+id/buy_tikcet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/buy_ticket"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />


    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">

        <Constraint
            android:id="@id/backdrop_poster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,4:1"
            app:layout_constraintTop_toBottomOf="@+id/text_overview"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@id/poster"
            android:layout_marginStart="0dp"
            android:visibility="gone"
            android:layout_marginLeft="0dp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space" />

        <Constraint
            android:id="@id/release_date"
            android:layout_marginStart="0dp"
            android:visibility="gone"
            android:layout_marginLeft="0dp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space" />


        <Constraint
            android:id="@id/ratingBar"
            android:layout_marginStart="0dp"
            android:visibility="gone"
            android:layout_marginLeft="0dp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space" />


        <Constraint
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="4dp"
            android:maxWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@id/backdrop_poster"
            app:layout_constraintEnd_toStartOf="@+id/favorite_button"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="@+id/backdrop_poster">
            <CustomAttribute
                app:attributeName="maxLines"
                app:customIntegerValue="1" />
        </Constraint>
        <Constraint
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_poster" />

        <Constraint
            android:id="@+id/buy_tikcet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/buy_ticket"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />


    </ConstraintSet>

</MotionScene>
