<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_twotone_movie_filter"
        android:title="@string/movie"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tvFragment"
        android:icon="@drawable/ic_twotone_live_tv"
        android:title="@string/tv_show"
        app:showAsAction="ifRoom" />

    <!-- use if want to show favorite local menu
    -->
    <!--<item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_twotone_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />-->


    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_twotone_account_circle"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>