...
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toBottomOf="@id/text_find_movie"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_movie" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_movie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view"
...
